Fix for gallery display on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -28,6 +28,10 @@
         width: 200px;
         margin-left: 57px;
     }
+
+    .galley-display {
+        display:block
+    }
     }
 
 
